# autonars

./: .gitignore  12_HOUR_RESEARCH_LOG.md  FRONTIERS_PLAN.md  MACNARS_500_YEAR_PLAN.md  MACNARS_V10_SOTA.md  MACNARS_V5_SOTA.md  MACNARS_V8_SOTA.md  PLAN.md  README.md  RESEARCH_REPORT.md  RESULTS.md  mnist_nars.py
MacNARS/: CMakeLists.txt
MacNARS/include/: Concept.h  Config.h  Memory.h  Truth.h
MacNARS/src/: Decay.metal  Introspection.cpp  Memory.cpp  NarseseParser.cpp  main.mm
MacNARS_v2/: CMakeLists.txt  CMakeLists.txt.quantum  build_cmd.sh  build_minigrid.sh  build_v8_gym.sh  cross_modal_nlp.py  run_atari_benchmark.py  run_doorkey.py  run_gym_benchmark.py  run_minigrid_benchmark.py  semantic_gravity_test  v10_swarm_poc  v11_quantum_poc  v4_full  v4_poc  v5_poc  v7_poc  v8_ale_bridge  v8_poc  vOmega_exec
MacNARS_v2/build_quantum/: CMakeCache.txt
MacNARS_v2/include/: Bag.h  ConceptV2.h  ConceptV3.h  Config.h  CorticalColumn.h  CosmologicalEngine.h  Distributor.h  EmbeddingService.h  GlobalWorkspace.h  MacNARSEngine.h  MemoryV2.h  MemoryV3.h  MetalBagEngine.h  MetalGraphEngine.h  NAL_Truth.h  PerceptionCortex.h  QuantumNAL.h  RuleEngine.h  Sentence.h  Term.h  UnifiedConcept.h  UnifiedMemory.h  UnifiedRuleEngine.h
MacNARS_v2/src/: AppleEmbeddingsMain.mm  DroneBaseline.cpp  EmbeddingService.mm  HyperCausal.metal  HyperCausalMain.mm  NalGraph.metal  QuantumMain.mm  SemanticGravity.metal  SemanticGravityMain.cpp  Superposition.metal  macnars_atari.cpp  macnars_gym.cpp  macnars_minigrid.cpp  macnars_v4_atari.cpp  macnars_v8_ale_bridge.mm  macnars_v8_gym.mm  main.cpp  metal_bag_c_api.mm  v11_quantum_poc.cpp  v4_full.cpp  v4_poc.cpp  v5_poc.mm  v7_poc.mm  v8_poc.mm
MacNARS_v2/src/speculative/: Introspection.h  MatrioshkaUniverse.metal  v10_swarm_poc.mm  vOmega_execution.mm
MacNARS_v2/src/speculative/MetalVariableBindingPOC/: main
MetalVariableBindingPOC/: main.swift  shader.metal
docs/planning/: FRONTIERS_PLAN.md  GYM_INTEGRATION_PLAN.md  PLAN_v2.md  REVIEW_AND_PLAN.md
docs/speculative/: MACNARS_V4_SOTA.md
